--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <p class="w-75 m-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero voluptas sint quaerat optio ipsum neque, aliquam ab qui vero. Dicta iste quibusdam fuga? Modi corrupti ipsam vero, quaerat delectus quisquam? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam dolorum</p>
       </div>
 
-    
+    <img src="./profile.jpg" alt="">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
    
