--- a/index.html
+++ b/index.html
@@ -18,7 +18,77 @@
           <p class="w-75 m-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero voluptas sint quaerat optio ipsum neque, aliquam ab qui vero. Dicta iste quibusdam fuga? Modi corrupti ipsam vero, quaerat delectus quisquam? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam dolorum</p>
       </div>
 
-    <img src="./profile.jpg" alt="">
+      <div class="container mt-5">
+        <div class="row">
+          <div class="col-xl-6">
+            <div class="img">
+              <div class="img-img">
+                <img class="mw-100 img-thumbnail" src="./profile.jpg" alt="">
+                <div class="img-content">
+                  <h2>SADIA EMA</h2>
+                 </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-6">
+         <div class="card">
+          <h2 class="card-header text-center heading">Sadia Ema</h2>
+         <div class="card-body">
+          <h2>About Me</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel labore sapiente cum aspernatur, soluta praesentium corrupti nostrum! Officia adipisci consectetur debitis quae dolorum tempora odit mollitia iusto vel, molestiae perferendis.</p>
+        <h3>Skill</h3>
+        <ul>
+          <li><a href="#"> Wordpress</a></li>
+          <li><a href="#"> Html</a></li>
+          <li><a href="#"> Css</a></li>
+        </ul>
+        <h2>Experience</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi nobis enim vitae sapiente eos similique itaque veniam expedita eius aperiam eum natus vel hic nesciunt, recusandae dolorem repellat tenetur nihil.</p>
+         </div>
+         </div>
+          </div>
+        </div>
+      </div>
+
+
+        <div class="service mt-5">
+          <div class="service-header text-center">
+            <h2>SERVICES</h2>
+          </div>
+          <div class="service-content text-center mt-4">
+            <div class="container">
+              <div class="row">
+                <div class="col-xl-4">
+                  <div class="card p-3">
+                   <h4>WEB DESIGN</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde temporibus commodi, et similique expedita ut consequatur eaque. Corporis similique odio inventore tempora necessitatibus sunt reprehenderit, atque, labore provident vero officiis.</p>
+                  </div>
+                </div>
+                <div class="col-xl-4">
+                  <div class="card p-3">
+                   <h4>DESIGNING</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde temporibus commodi, et similique expedita ut consequatur eaque. Corporis similique odio inventore tempora necessitatibus sunt reprehenderit, atque, labore provident vero officiis.</p>
+                  </div>
+                </div>
+                <div class="col-xl-4">
+                  <div class="card p-3">
+                   <h4>WEB DEVELOPMENT</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde temporibus commodi, et similique expedita ut consequatur eaque. Corporis similique odio inventore tempora necessitatibus sunt reprehenderit, atque, labore provident vero officiis.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+
+        <div class="footer text-center mt-4">
+          <h1>CALL-01794653987</h1>
+          <p class="w-75 m-auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium, enim nulla obcaecati itaque, aliquid voluptate incidunt possimus provident temporibus voluptates quos repellendus necessitatibus eius dicta. Molestias quidem atque quaerat obcaecati.</p>
+        </div>
+
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
    
